--- a/views/brand.ejs
+++ b/views/brand.ejs
@@ -61,7 +61,7 @@
 								</header>
 								<a href="#" class="image main"><img src="images/pic01.jpg" alt="" /></a>
 								<ul class="actions special">
-									<li><a href="#" class="button large">關於實驗動物你該知道的事</a></li>
+									<li><a href="/" class="button large">回首頁</a></li>
 								</ul>
 							</article>
 
