品牌頁面修改+管理員介面權限

--- a/views/brand.ejs
+++ b/views/brand.ejs
@@ -53,67 +53,56 @@
 						<!-- Featured Post -->
 							<article class="post featured">
 								<header class="major">
-									<span class="date"></span>
-									<h2><a href="#">友善動物品牌名單<br />
-										
-									</a></h2>
+									
+									<h2>友善動物品牌名單<br /></h2>
 									<p></p>
 								</header>
-								<a href="#" class="image main"><img src="images/pic01.jpg" alt="" /></a>
+								<div class="image main"><img src="images/pic01.jpg" alt="" /></div>
 								<ul class="actions special">
 									<li><a href="/" class="button large">回首頁</a></li>
 								</ul>
+								<span class="date">名單更新日期:<%= items[0].updatetime %></span>
 							</article>
 
 						<!-- Posts -->
-							<section class="posts">
-								<article>
+						
+								<div>
 									<header>
-										<span class="date">名單更新日期:<%= items[0].updatetime %></span>
 										<h2><a href="leapingbunny">Leaping Bunny Certification<br />
 										</a></h2>
+										<span class="date">參考資料:<a href="https://www.leapingbunny.org/shopping-guide">https://www.leapingbunny.org/shopping-guide</a></span>
 									</header>
-									<a href="leapingbunny" class="image fit"><img src="images/pic02.jpg" alt="" /></a>
+									<a href="leapingbunny" class="image fit"><img src="images/pic02.jpg" alt="" ></a>
 									<p></p>
 									<ul class="actions special">
 										<li><a href="leapingbunny" class="button">查看名單</a></li>
 									</ul>
-								</article>
-								<article>
+								</div>
+								<div class="brandpic">
 									<header>
-										<span class="date">名單更新日期:<%= items[0].updatetime %></span>
-										<h2><a href="ccf">Not Tested on Animals Rabbit<br />
-										</a></h2>
-									</header>
-									<a href="ccf" class="image fit"><img src="images/pic03.jpg" alt="" /></a>
-									<p></p>
-									<ul class="actions special">
-										<li><a href="ccf" class="button">查看名單</a></li>
-									</ul>
-								</article>
-								<article>
-									<header>
-										<span class="date">名單更新日期：<%= items[0].updatetime %></span>
 										<h2><a href="peta">Beauty without Bunnies Program<br />
 										</a></h2>
+										<span class="date">參考資料:<a href="https://crueltyfree.peta.org/companies-dont-test/">https://crueltyfree.peta.org/companies-dont-test/</a></span>
 									</header>
 									<a href="peta" class="image fit"><img src="images/pic04.jpg" alt="" /></a>
 									<p></p>
 									<ul class="actions special">
 										<li><a href="peta" class="button">查看名單</a></li>
 									</ul>
-								</article>
-								<article>
+								</div>
+								<div class="brandpic">
 									<header>
-										<span class="date">名單更新日期：<%= items[0].updatetime %></span>
 										<h2><a href="nmcb">兔兔不哭<br />
 										</a></h2>
+										<span class="date">參考資料:<a href="https://www.922.org.tw/response/">https://www.922.org.tw/response/</a></span>
 									</header>
 									<a href="nmcb" class="image fit"><img src="images/pic05.jpg" alt="" /></a>
 									<p></p>
 									<ul class="actions special">
 										<li><a href="nmcb" class="button">查看名單</a></li>
 									</ul>
+								</div>
+								
 								<!-- </article>
 								<article>
 									<header>
@@ -139,8 +128,7 @@
 										<li><a href="#" class="button">Full Story</a></li>
 									</ul>
 								</article>-->
-							</section>
-
+						
 						<!-- Footer -->
 							<footer>
 								<div class="pagination">
