--- a/views/register.ejs
+++ b/views/register.ejs
@@ -101,7 +101,7 @@ shrink-to-fit=no"
       <option value="女">女</option>
     </select>
     <p></p>
-    <input type="submit" value="確認登記">
+    <input type="submit" value="確認">
   </form>
   <script>
     function readURL(input){
