--- a/views/donate.ejs
+++ b/views/donate.ejs
@@ -133,7 +133,7 @@ shrink-to-fit=no"
             <p>性別：<%= items[i].an_sex %><p>
               <p>品種：<%= items[i].an_variety %><p>
                 <p>體重：<%= items[i].an_size %><p>
-                  <p>生日：<%= items[i].an_birth %><p>
+                  <p>生日（發現日期）：<%= items[i].an_birth %><p>
                   <p>故事內容：<%= items[i].an_depiction %><p>
        <!-- 資訊：<span class="badge bg-danger me-2">母</span
         ><span class="badge bg-warning me-2">紐西蘭大白兔</span>-->
