管理員新增/更新/刪除頁面+頁面小改

--- a/views/feedbackpage.ejs
+++ b/views/feedbackpage.ejs
@@ -46,12 +46,6 @@
                             <li><a href="animallist">全部動物</a></li>
                       <!--  <li> <a href="doctor-profile.html">動物資料</a> </li> -->
                         </ul>
-                        <li class="has-submenu">
-                            <a href="feedbackpage">
-                                <i class="fas fa-book-medical"></i>
-                                <span class="nav-label">會員回報訊息</span>
-                            </a>
-                        </li>
                     </li>
                     <!--<li class="has-submenu">
                         <a href="#" class="has-arrow mm-collapsed">
@@ -195,129 +189,18 @@
                     </div>
                 </div>
                 <div class="header-right">
-                    <div class="fullscreen notification_dropdown">
-                        <div class="full">
-                            <a class="text-dark" href="#!" onclick="javascript:toggleFullScreen()">
-                                <i class="fas fa-expand"></i>
-                            </a>
-                        </div>
-                    </div>
-                    <div class="notification_dropdown">
-                        <div class="cart-wrapper">
-                            <div class="cart-icon">
-                                <a class="cart-control" href="#">
-                                    <i class="fas fa-bell"></i>
-                                    <div class="pulse-css"></div>
-                                </a>
-                            </div>
-                            <div class="cart-dropdown-form dropdown-container">
-                                <div class="form-content">
-                                    <div class="widget-media main-scroll nicescroll-box">
-                                        <ul class="timeline">
-                                            <li>
-                                                <h6 class="mb-0">通知</h6>
-                                            </li>
-                                            <li>
-                                                <div class="timeline-panel">
-                                                    <div class="media mr-2">
-                                                        <img alt="image" src="https://via.placeholder.com/150/f8f8f8/2b2b2b">
-                                                    </div>
-                                                    <div class="media-body">
-                                                        <h6 class="mb-1 ">訊息通知</h6>
-                                                        <small class="d-block">日期</small>
-                                                    </div>
-                                                </div>
-                                            </li>
-                                            <li>
-                                                <div class="timeline-panel">
-                                                    <div class="media mr-2 media-info">
-                                                        <img alt="image" src="https://via.placeholder.com/150/f8f8f8/2b2b2b">
-                                                    </div>
-                                                    <div class="media-body">
-                                                        <h6 class="mb-1">訊息通知</h6>
-                                                        <small class="d-block">日期</small>
-                                                    </div>
-                                                </div>
-                                            </li>
-                                            <li>
-                                                <div class="timeline-panel">
-                                                    <div class="media mr-2 media-success">
-                                                        <img alt="image" src="https://via.placeholder.com/150/f8f8f8/2b2b2b">
-                                                    </div>
-                                                    <div class="media-body">
-                                                        <h6 class="mb-1">訊息通知</h6>
-                                                        <small class="d-block">日期</small>
-                                                    </div>
-                                                </div>
-                                            </li>
-                                            <li>
-                                                <div class="timeline-panel">
-                                                    <div class="media mr-2">
-                                                        <img alt="image" src="https://via.placeholder.com/150/f8f8f8/2b2b2b">
-                                                    </div>
-                                                    <div class="media-body">
-                                                        <h6 class="mb-1">訊息通知</h6>
-                                                        <small class="d-block">日期</small>
-                                                    </div>
-                                                </div>
-                                            </li>
-                                            <li>
-                                                <div class="timeline-panel">
-                                                    <div class="media mr-2 media-danger">
-                                                        <img alt="image" src="https://via.placeholder.com/150/f8f8f8/2b2b2b">
-                                                    </div>
-                                                    <div class="media-body">
-                                                        <h6 class="mb-1">訊息通知</h6>
-                                                        <small class="d-block">日期</small>
-                                                    </div>
-                                                </div>
-                                            </li>
-                                            <li>
-                                                <div class="timeline-panel">
-                                                    <div class="media mr-2 media-primary">
-                                                        <img alt="image" src="https://via.placeholder.com/150/f8f8f8/2b2b2b">
-                                                    </div>
-                                                    <div class="media-body">
-                                                        <h6 class="mb-1">訊息通知</h6>
-                                                        <small class="d-block">日期</small>
-                                                    </div>
-                                                </div>
-                                            </li>
-                                        </ul>
-                                    </div>
-                                    <a class="all-notification btn btn-primary" href="#">
-                                        查看全部通知
-                                    </a>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
                     <div class="my-account-wrapper">
                         <div class="account-wrapper">
                             <div class="account-control">
                                 <a class="login header-profile" href="#" title="Sign in">
-                                    <div class="header-info">
-                                        <span>管理員</span>
-                                        <small>Admin</small>
-                                    </div>
-                                    <img src="https://via.placeholder.com/128/f8f8f8/2b2b2b" alt="people">
-                                </a>
-                                <div class="account-dropdown-form dropdown-container">
                                     <div class="form-content">
-                            <!--           <a href="doctor-settings.html">
-                                            <i class="far fa-user"></i>
-                                            <span class="ml-2">Profile</span>
-                                        </a>
-                                        <a href="#">
-                                            <i class="far fa-envelope"></i>
-                                            <span class="ml-2">Inbox</span>--> 
-                                        </a>
                                         <a href="logout">
                                             <i class="fas fa-sign-in-alt"></i>
                                             <span class="ml-2">登出 </span>
                                         </a>
                                     </div>
-                                </div>
+                                    
+                                </a>
                             </div>
                         </div>
                     </div>
@@ -421,14 +304,14 @@
         <!-- End section content -->
 
 
-        <!-- start section footer -->
+        <!-- start section footer 
         <div class="footer">
             <div class="copyright">
                 <p class="mb-0"><a href="" target="_blank"></a> 
                 </p>
             </div>
         </div>
-        <!-- End section footer -->
+       End section footer -->
 
 
         <!-- Modal  -->
