--- a/views/addanimal.ejs
+++ b/views/addanimal.ejs
@@ -289,20 +289,7 @@
                                                         </div>
                                                     </div>
                                                 </div>
-                                                <div class="row">
-                                                    <div class="col-xl-4">
-                                                        <!--   </div>
-                                                <div class="col-xl-8">
-                                                    <div class="form-group">
-                                                        <select class="form-control ">
-                                                            <option>User role</option>
-                                                            <option>Surgery</option>
-                                                            <option>Gastroenterologist</option>
-                                                            <option>Endocrinologist</option>
-                                                        </select>
-                                                    </div>-->
-                                                    </div>
-                                                </div>
+                                                
                                                 <div class="row">
                                                     <div class="col-xl-4">
                                                         <div class="form-group">
@@ -414,14 +401,14 @@
                     <!-- End section content -->
 
 
-                    <!-- start section footer -->
+                    <!-- start section footer 
                     <div class="footer">
                         <div class="copyright">
 
                             </p>
                         </div>
                     </div>
-                    <!-- End section footer -->
+                     End section footer -->
 
 
                 </div>
