--- a/views/animaledit.ejs
+++ b/views/animaledit.ejs
@@ -415,14 +415,14 @@
                     <!-- End section content -->
 
 
-                    <!-- start section footer -->
+                    <!-- start section footer 
                     <div class="footer">
                         <div class="copyright">
 
                             </p>
                         </div>
                     </div>
-                    <!-- End section footer -->
+                    End section footer -->
 
 
                 </div>
