--- a/views/animallist.ejs
+++ b/views/animallist.ejs
@@ -277,14 +277,14 @@
         <!-- End section content -->
 
 
-        <!-- start section footer -->
+        <!-- start section footer 
         <div class="footer ">
             <div class="copyright ">
-                <!--    <p class="mb-0">Copyright ©  &amp; Developed by <a href="" target="_blank"></a> -->
+                 <p class="mb-0">Copyright ©  &amp; Developed by <a href="" target="_blank"></a> 
                 </p>
             </div>
         </div>
-        <!-- End section footer -->
+        End section footer -->
 
 
     </div>
