--- a/views/editbackmember.ejs
+++ b/views/editbackmember.ejs
@@ -70,8 +70,14 @@
                             <i class="fas fa-calendar-plus"></i>
                             <span class="nav-label">會員管理</span>
                         </a>
-                        <!--          </li>
+                    </li>
                     <li class="has-submenu">
+                        <a href="feedbackpage">
+                            <i class="fas fa-book-medical"></i>
+                            <span class="nav-label">會員回報訊息</span>
+                        </a>
+                    </li>
+                    <!--<li class="has-submenu">
                         <a href="#" class="has-arrow mm-collapsed">
                             <i class="fas fa-book-medical"></i>
                             <span class="nav-label">Prescriptions</span>
@@ -420,14 +426,14 @@
                     <!-- End section content -->
 
 
-                    <!-- start section footer -->
+                    <!-- start section footer
                     <div class="footer">
                         <div class="copyright">
 
                             </p>
                         </div>
                     </div>
-                    <!-- End section footer -->
+                   End section footer -->
 
 
                 </div>
