--- a/views/memberadmin.ejs
+++ b/views/memberadmin.ejs
@@ -278,7 +278,7 @@
                                                         <td><%= items[i].m_password %></td> 
                                                         <td><%= items[i].m_phone %></td>
                                                         <td><%= items[i].m_birth %></td>
-                                                        <td class="text-start"> <span class="badge btn-danger"><%= items[i].m_sex %></span></td>  
+                                                        <td><%= items[i].m_sex %></td>  
                                                     </tr> 
                                                 <% } %> 
                                             </tbody>
@@ -294,14 +294,14 @@
         <!-- End section content -->
 
 
-        <!-- start section footer -->
+        <!-- start section footer 
         <div class="footer">
             <div class="copyright">
                 <p class="mb-0"><a href="" target="_blank"></a> 
                 </p>
             </div>
         </div>
-        <!-- End section footer -->
+        End section footer -->
     </div>
 
 
